Attempt to hide ios url bar: remove overflow hidden combined with fixed positions

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,6 @@ body {
 
 body {
   height: 1.5vh;
-  overflow: hidden;
-}
-
-body > * {
-  overflow: hidden;
 }
 
 a {
